feat(domain): add get all route
